templates/resources/route.yaml
{
  "apiVersion": "route.openshift.io/v1",
  "kind": "Route",
  "metadata": {
    "annotations": {
      "haproxy.router.openshift.io/balance": "$MY_ROUTE_BALANCE"
    },
    "labels": {
      "app.kubernetes.io/instance": "$MY_ROUTE_INSTANCE",
      "app.kubernetes.io/part-of": "$MY_ROUTE_PARTOF"
    },
    "name": "$MY_ROUTE_NAME",
    "namespace": "$MY_PROJECT"
  },
  "spec": {
    "host": "$MY_ROUTE_HOST",
    "port": {
      "targetPort": $MY_ROUTE_PORT
    },
    "tls": {
      "termination": "passthrough"
    },
    "to": {
      "kind": "Service",
      "name": "$MY_ROUTE_SERVICE",
      "weight": 100
    },
    "wildcardPolicy": "None"
  }
}
